src/core/generator/tests/snapshots/json_to_config_spec__empty_list.json.snap
---
source: src/core/generator/tests/json_to_config_spec.rs
expression: cfg.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Query {
  users: [JSON] @http(url: "https://example.com/users")
}
