src/core/generator/tests/snapshots/json_to_config_spec__incompatible_properties.json.snap
---
source: src/core/generator/tests/json_to_config_spec.rs
expression: cfg.to_sdl()
---
schema @server @upstream(allowedHeaders: ["authorization"]) {
  query: Query
}

type GEN__1 {
  campaignTemplates: JSON
  colors: [JSON]
}

type Query {
  inCompatibleProperties: GEN__1 @http(baseURL: "https://example.com", path: "/")
}
