src/core/generator/tests/snapshots/json_to_config_spec__list.json.snap
---
source: src/core/generator/tests/json_to_config_spec.rs
expression: cfg.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Query {
  users: [T1] @http(baseURL: "https://example.com", path: "/users")
}

type T1 {
  adult: Boolean
  age: Int
  name: String
}
