src/core/generator/tests/snapshots/json_to_config_spec__list_primitive_type.json.snap
---
source: src/core/generator/tests/json_to_config_spec.rs
expression: cfg.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Query {
  users: [String] @http(url: "https://example.com/users")
}
