src/core/generator/tests/snapshots/json_to_config_spec__nested_same_properties.json.snap
---
source: src/core/generator/tests/json_to_config_spec.rs
expression: cfg.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Query {
  test: T4 @http(baseURL: "https://example.com", path: "/")
}

type T1 {
  age: Int
}

type T2 {
  container: T1
  name: String
}

type T3 {
  container: T2
  name: String
}

type T4 {
  container: T3
}
