src/core/generator/tests/snapshots/json_to_config_spec__null.json.snap
---
source: src/core/generator/tests/json_to_config_spec.rs
expression: cfg.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Query {
  usersAge(age: Int): JSON @http(url: "https://example.com/users?age=12", query: [{key: "age", value: "{{.args.age}}"}])
}
