src/core/generator/tests/snapshots/json_to_config_spec__number.json.snap
---
source: src/core/generator/tests/json_to_config_spec.rs
expression: cfg.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Query {
  verifiedUsers(verifiedUser: Boolean): Int @http(url: "https://example.com/users?verified_user=true", query: [{key: "verified_user", value: "{{.args.verifiedUser}}"}])
}
